[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/menu_buttons.png" type="Texture" id=1]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/white_tile.png" type="Texture" id=3]

[sub_resource type="AnimatedTexture" id=1]

[node name="MainMenu" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteBackground" type="Sprite" parent="."]
position = Vector2( 487.474, 295.672 )
scale = Vector2( 20.35, 10.5931 )
texture = ExtResource( 3 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 487.474, 295.672 )
scale = Vector2( 0.438908, 0.382217 )
texture = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
show_behind_parent = true
margin_left = 355.441
margin_top = 101.46
margin_right = 368.441
margin_bottom = 121.46
rect_scale = Vector2( 16.4208, 4.23399 )
mouse_default_cursor_shape = 2
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
show_behind_parent = true
margin_left = 355.441
margin_top = 217.243
margin_right = 368.441
margin_bottom = 237.243
rect_scale = Vector2( 16.4208, 4.23399 )
mouse_default_cursor_shape = 2
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="."]
show_behind_parent = true
margin_left = 349.622
margin_top = 330.818
margin_right = 362.622
margin_bottom = 350.818
rect_scale = Vector2( 16.4208, 4.23399 )
mouse_default_cursor_shape = 2
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EggCollectionButton" type="Button" parent="."]
show_behind_parent = true
margin_left = 325.743
margin_top = 436.367
margin_right = 338.743
margin_bottom = 456.367
rect_scale = Vector2( 28.1239, 3.77368 )
mouse_default_cursor_shape = 2
icon = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="EggCollectionButton" to="." method="_on_EggCollectionButton_pressed"]
